<resources>
    <!-- Application Name String. -->
    <string name="app_name">Colors Game</string>
    <!-- Text Boxes String. -->
    <string name="box_one">Box One</string>
    <string name="box_two">Box Two</string>
    <string name="box_three">Box Three</string>
    <string name="box_four">Box Four</string>
    <string name="box_five">Box Five</string>
    <!-- Instructions Label And Guide. -->
    <string name="how_to_play">How To Play</string>
    <string name="instructions">Tap the screen and boxes</string>
    <!-- String For the buttons text.-->
    <string name="red_btn">Red</string>
    <string name="yellow_btn">Yellow</string>
    <string name="green_btn">Green</string>
</resources>
