<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity">

        <TextView
                android:id="@+id/box_one_text"
                style="@style/WhiteBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/wide_margin"
                android:layout_marginEnd="@dimen/wide_margin"
                android:layout_marginStart="@dimen/wide_margin"
                android:text="@string/box_one"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        <TextView
                android:layout_width="130dp"
                style="@style/WhiteBox"
                android:layout_height="130dp"
                android:id="@+id/box_two_text" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/box_one_text" android:text="@string/box_two"/>
        <TextView
                android:text="@string/box_three"
                style="@style/WhiteBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/box_three_text"
                app:layout_constraintBottom_toTopOf="@+id/box_four_text"
                app:layout_constraintTop_toTopOf="@+id/box_two_text"
                app:layout_constraintStart_toEndOf="@+id/box_two_text" android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>
        <TextView
                android:text="@string/box_four"
                android:layout_width="0dp"
                style="@style/WhiteBox"
                android:layout_height="wrap_content"
                android:id="@+id/box_four_text"
                app:layout_constraintTop_toBottomOf="@+id/box_three_text"
                app:layout_constraintBottom_toTopOf="@+id/box_five_text" android:layout_marginTop="16dp"
                app:layout_constraintStart_toEndOf="@+id/box_two_text" android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"/>
        <TextView
                android:text="@string/box_five"
                style="@style/WhiteBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/box_five_text"
                app:layout_constraintBottom_toBottomOf="@+id/box_two_text"
                app:layout_constraintTop_toBottomOf="@+id/box_four_text"
                app:layout_constraintStart_toEndOf="@+id/box_two_text" android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/label" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" android:text="@string/how_to_play"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:fontFamily="@font/roboto_condensed_bold"
                app:layout_constraintBaseline_toBaselineOf="@+id/instructions"/>
        <TextView
                android:text="@string/instructions"
                android:textAlignment="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/instructions" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/box_two_text" android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toEndOf="@+id/label"
                android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintVertical_bias="0.0"/>
        <Button
                android:text="@string/red_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/red_btn"
                app:layout_constraintBaseline_toBaselineOf="@+id/yellow_btn"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/yellow_btn"/>
        <Button
                android:text="@string/yellow_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/yellow_btn" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/instructions" android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/red_btn" android:layout_marginStart="16dp"
                app:layout_constraintEnd_toStartOf="@+id/green_btn" android:layout_marginEnd="16dp"
                app:layout_constraintHorizontal_bias="0.5"/>
        <Button
                android:text="@string/green_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/green_btn"
                app:layout_constraintBaseline_toBaselineOf="@+id/yellow_btn" android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/yellow_btn"
                app:layout_constraintHorizontal_bias="0.5"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>